# quant_platform_HF

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  dvc.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/: parameter-optimization.md
.dvc/: .gitignore  config
.github/agents/: parameter-optimizer.agent.md
.github/workflows/: ci.yml  release-package.yml  simnow_compare_daily.yml  simnow_weekly_stress.yml
build-pybind/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  backtest_data_feed_test[1]_include.cmake  bar_aggregator_test[1]_include.cmake  basic_risk_engine_test[1]_include.cmake  circuit_breaker_test[1]_include.cmake  cmake_install.cmake  ctp_account_ledger_test[1]_include.cmake  ctp_config_loader_test[1]_include.cmake  ctp_config_test[1]_include.cmake  ctp_gateway_adapter_test[1]_include.cmake  ctp_md_adapter_test[1]_include.cmake  ctp_position_ledger_test[1]_include.cmake  ctp_trader_adapter_test[1]_include.cmake  daily_settlement_service_test[1]_include.cmake  event_dispatcher_test[1]_include.cmake  event_object_pool_test[1]_include.cmake  execution_engine_test[1]_include.cmake  execution_planner_test[1]_include.cmake  execution_router_test[1]_include.cmake  fixed_decimal_test[1]_include.cmake  flow_controller_test[1]_include.cmake  in_memory_portfolio_ledger_test[1]_include.cmake  libpq_timescale_sql_client_test[1]_include.cmake  live_data_feed_test[1]_include.cmake  market_bus_producer_test[1]_include.cmake  metric_registry_test[1]_include.cmake  object_pool_test[1]_include.cmake  order_manager_test[1]_include.cmake  order_state_machine_test[1]_include.cmake  parquet_data_feed_test[1]_include.cmake  position_manager_test[1]_include.cmake  query_scheduler_test[1]_include.cmake  rate_limiter_test[1]_include.cmake  redis_realtime_store_client_adapter_test[1]_include.cmake  redis_realtime_store_test[1]_include.cmake  risk_manager_test[1]_include.cmake  risk_policy_engine_test[1]_include.cmake  (+15 more)
cmake/: FindPrometheusCpp.cmake
configs/: risk_rules.yaml  trading_sessions.yaml
configs/backtest/: backtest_run.yaml  backtest_run_sim_trade_candidate_c.yaml  backtest_run_sim_trade_candidate_hc.yaml  backtest_run_sim_trade_candidate_m.yaml  backtest_run_sim_trade_candidate_rb.yaml  backtest_run_sim_trade_candidates.yaml
configs/data_lifecycle/: policies.yaml
configs/dev/: ctp.yaml
configs/ops/: backtest_run.yaml  ctp_cutover.template.env  ctp_rollback_drill.template.env  parameter_optim.yaml  parameter_optim_constraints_acceptance.yaml  parameter_optim_constraints_rolling_acceptance.yaml  parameter_optim_random_rolling_acceptance.yaml  rolling_backtest.yaml  rolling_optimize_constraints_acceptance.yaml  rolling_optimize_kama.yaml  rolling_optimize_random_acceptance.yaml  rolling_optimize_random_acceptance_replay.yaml
configs/perf/: backtest_benchmark_baseline.json  baseline.json
configs/prod/: ctp.yaml
configs/sim/: ctp.yaml  ctp_sim_trade_candidates.yaml  ctp_trading_hours.yaml  ctp_trading_hours_group2.yaml  ctp_trading_hours_group3.yaml
configs/strategies/: contract_expiry_calendar.yaml  instrument_info.json  main_backtest_production.yaml  main_backtest_strategy.yaml  main_backtest_strategy_kama_trend_1.yaml  main_backtest_strategy_v4_t0.yaml  main_backtest_strategy_v4_t1.yaml  main_backtest_strategy_v4_t2.yaml  main_sim_trade_candidate_c.yaml  main_sim_trade_candidate_hc.yaml  main_sim_trade_candidate_m.yaml  main_sim_trade_candidate_rb.yaml  products_info.yaml
deploy/systemd/: quant-hft-core-engine.env.example  quant-hft-core-engine.service  quant-hft-data-pipeline.env.example  quant-hft-data-pipeline.service
develop/: 00-实现对齐矩阵与缺口总览.md  00-未完成能力补齐路线图.md  00-项目总览与设计原则.md
develop/01-系统架构设计/: 01-01-整体架构图与技术栈选型.md  01-02-核心模块划分与职责.md  01-03-关键数据流与接口设计.md
develop/02-策略研究平台设计/: 02-01-研究环境与数据接口规范.md  02-02-因子研究与回测引擎设计.md  02-03-策略模版与绩效分析体系.md
develop/03-实盘交易系统核心设计/: 03-01-实时风控体系设计.md  03-02-订单与执行引擎设计.md  03-03-高性能基础组件设计（内存管理、网络等）.md
develop/04-基础设施与运维/: 04-01-监控、日志与告警体系设计.md  04-02-部署、灾备与持续集成方案.md
develop/05-API文档/: 05-01-C++核心API参考.md  05-02-Python策略API参考.md
develop/06-开发者指南/: 06-01-环境搭建与快速开始.md  06-02-代码结构与开发流程.md  06-03-文档开发与多会话协作.md
develop/07-部署与运维/: 07-01-系统部署手册.md  07-02-运维操作手册.md
develop/08-测试与验证/: 08-01-测试策略与验证方案.md
develop/09-数据库设计/: 09-01-数据库设计.md
docs/: ARCHITECTURE_HANDBOOK_V1.md  BACKTEST_REPLAY_HARNESS.md  CLI_NAMING.md  CTP_ONE_SHOT_CUTOVER_RUNBOOK.md  CTP_SIMNOW_RECONNECT_FAULT_INJECTION_RUNBOOK.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTED_FEATURES_INVENTORY.md  K8S_DEPLOYMENT_RUNBOOK.md  MVP_12W_ACCEPTANCE.md  OPS_SLI_SLO_SPEC.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  ROADMAP_24W.md  STRATEGY_BRIDGE_REDIS_PROTOCOL.md  SYSTEMD_DEPLOYMENT_RUNBOOK.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  USAGE_GUIDE_DEVELOPER.md  WAL_RECOVERY_RUNBOOK.md
docs/contracts/: CONTRACT_CHANGELOG.md
docs/knowlage/: 交易风控系统.docx  期货ctp交易查询中的流控.docx  期货ctp保证金手续费费率查询.docx  期货ctp保证金的计算.docx  期货ctp报单和回报.docx  期货ctp持仓查询与更新.docx  期货ctp撤单.docx  期货ctp每天当日盈亏和保证金的结算.docx  期货ctp的账户.docx  期货ctp穿透式监管.docx  期货ctp行情订阅常见问题.docx  期货基础知识.docx  自成交风控.docx  行情数据介绍.docx
docs/ops/: backtest_data_csv_expected.sha256  backtest_data_parquet_v2_expected.sha256  config_catalog.md  configuration.md  logging.md  metrics.md  one_click_deploy.md  parameter_optimization_rolling_testing.md  parameter_optimization_skill.md  parameter_optimizer_agent_usage.md  sim_trade_candidate_combo_analysis.md  sim_trade_candidate_params.md  simnow_unattended_trading.md
docs/plans/: 2026-02-11-m10-multi-host-dr.md
docs/requirements/: develop_requirements.yaml
docs/research/: PR6_1_DATA_FOUNDATION.md  PR7_2_ATTRIBUTION_REPORTING.md  PR7_3_WEEKLY_STRESS_COLLECTION.md  backtest_engine.md
docs/results/: 20260701_20260718_repair_validation.json  20260701_20260718_repair_validation.md  backtest_benchmark_data_report.json  backtest_benchmark_result.json  (+46 more)
infra/: docker-compose.prodlike.multi-host.yaml  docker-compose.prodlike.yaml  docker-compose.single-host.m2.yaml  docker-compose.single-host.yaml
(+758 files in other folders)
